📝 Add Repository URL

--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "license": "UNLICENSED",
   "repository": {
     "type": "git",
-    "url": "git+"
+    "url": "git@github.com:M-Gerace-Enterprise/docs-3pl.git"
   }
 }
